# LearningTracker

./: .gitignore  pyproject.toml  pytest.ini  tasks.py
backend/admin/: settings.py  urls.py
backend/learningtracker/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/learningtracker/management/commands/: create_default_superuser.py
backend/learningtracker/migrations/: 0001_initial.py
backend/learningtracker/utils/: error_const.py
backend/static/css/: custom.css
backend/static/js/: calendar.js
backend/tests/: conftest.py  test_filters.py  test_models.py  test_serializers.py  test_views.py
development/: .dockerignore  Dockerfile.backend.dev  Dockerfile.dev  Dockerfile.frontend.dev  docker-compose-dev.yml  docker-compose.yml
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js  App.jsx  Calendar.js  Login.js  api.js  index.css
frontend/src/components/: Banner.jsx  CalendarPage.jsx  LoginForm.jsx  NavBar.jsx
frontend/src/pages/: HomePage.jsx
src/admin/: settings.py  urls.py
src/learningtracker/: apps.py  models.py  serializers.py  urls.py  views.py
src/learningtracker/templates/: base.html  day_detail.html  home.html
src/static/css/: custom.css
tests/: test_models.py
