[tool.poetry]
name = "learningtracker"
version = "0.1.0"
description = ""
authors = ["kvncampos <kvnelpdfw@hotmail.com>"]
readme = "README.md"
packages = [{include = "learningtracker", from = "backend"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
invoke = "^2.2.0"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
ruff = "^0.7.3"
black = "^24.10.0"
django-cors-headers = "^4.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-factoryboy = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
